# project_renewal

./: .gitignore  README.md  pyproject.toml
src/project_renewal/: __main__.py  consolidate.py
src/project_renewal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: consolidated.csv  contract.csv  finance.csv  license.csv  test_smoke.py
